<resources>
    <string name="app_name">MarsAlbum</string>
    <string name="network_error_message">%s. \nTap on the image below to retry</string>
    <string name="no_photo_message">Oops! No photo was captured on the selected Mars Sol (day)</string>
    <string name="curiosity_rover">Curiosity Rover</string>
    <string name="perseverance_rover">Perseverance Rover</string>
    <string name="opportunity_rover">Opportunity Rover</string>
    <string name="spirit_rover">Spirit Rover</string>
    <string name="please_select_a_preferred_sol_from_the_list_below">Please select a preferred Mars Sol (day) from the list below</string>
    <string name="proceed">Proceed</string>
    <string name="filter">Filter</string>
    <string name="rover">Rover Name: %s</string>
    <string name="rover_id">Rover ID: %d</string>
    <string name="launch_date">Launch Date: %s</string>
    <string name="land_date">Landing Date: %s</string>
    <string name="status">Status: %s</string>
    <string name="photo_id">Photo ID: %d</string>
    <string name="date_captured">Date Captured: %s</string>
    <string name="camera_used">Camera Used: %s (%s)</string>
    <string name="camera_id">Camera ID: %d</string>
    <string name="mars_photo">Mars Photo</string>
</resources>